<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray_bottom_qian"
    android:orientation="vertical" >

    <include
        android:id="@+id/windowtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/windowtitle" >
    </include>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/colorful_line" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <Button
                    android:id="@+id/btn_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/lclose_selector" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/white"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp" >

                    <TextView
                        style="@style/textview_red20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="*" />

                    <TextView
                        style="@style/textview_black20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name" />

                    <EditText
                        android:id="@+id/edit_name"
                        style="@style/textview_black20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:background="@null"
                        android:hint="@string/user_name_hint"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp" >

                    <TextView
                        style="@style/textview_red20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="*" />

                    <TextView
                        style="@style/textview_black20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_pwd" />

                    <EditText
                        android:id="@+id/edit_pwd"
                        style="@style/textview_black20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:background="@null"
                        android:hint="@string/user_pwd_hint"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp" >

                    <TextView
                        style="@style/textview_red20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="*" />

                    <TextView
                        style="@style/textview_black20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_nick_name" />

                    <EditText
                        android:id="@+id/edit_nick_name"
                        style="@style/textview_black20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:background="@null"
                        android:hint="@string/user_nick_name_hint"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp" >

                    <TextView
                        style="@style/textview_black20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_phone" />

                    <EditText
                        android:id="@+id/edit_phone"
                        style="@style/textview_black20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:background="@null"
                        android:hint="@string/user_phone_hint"
                        android:inputType="number"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp" >

                    <TextView
                        style="@style/textview_black20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_email" />

                    <EditText
                        android:id="@+id/edit_email"
                        style="@style/textview_black20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:background="@null"
                        android:hint="@string/user_email_hint"
                        android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" >

                <Button
                    android:id="@+id/btn_register"
                    style="@style/loginbtn_redbg_white22"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>