<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/windowtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/windowtitle" >
    </include>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/order_detail_right_nor"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/order_detail" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/link_shi" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/textview_black16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_no" />

                    <TextView
                        style="@style/textview_gray16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="11121232131232131" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/textview_black16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_paydate" />

                    <TextView
                        style="@style/textview_gray16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="2014-01-12 18:12:12" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/textview_black16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_tz_money" />

                    <TextView
                        style="@style/textview_gray16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="2.00元" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/textview_black16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_zj_money" />

                    <TextView
                        style="@style/textview_gray16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="--" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/textview_black16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_warm" />

                    <TextView
                        style="@style/textview_gray16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="11121232131232131" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/textview_black16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_status" />

                    <TextView
                        style="@style/textview_gray16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="开奖处理中" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/order_detail_right_nor"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/order_content" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/link_shi" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/textview_black16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_flag" />

                    <TextView
                        style="@style/textview_gray16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="11121232131232131" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/textview_black16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_content" />

                    <TextView
                        style="@style/textview_gray16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="4,43,2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/textview_black16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_beishu" />

                    <TextView
                        style="@style/textview_gray16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="2倍" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/textview_black16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_zhushu" />

                    <TextView
                        style="@style/textview_gray16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="1注" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/order_detail_right_nor"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/order_number" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/link_shi" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>